nohup.out
[I 2023-10-05 22:06:29.677 ServerApp] Package notebook took 0.0000s to import
[I 2023-10-05 22:06:29.685 ServerApp] Package jupyter_lsp took 0.0079s to import
[W 2023-10-05 22:06:29.685 ServerApp] A `_jupyter_server_extension_points` function was not found in jupyter_lsp. Instead, a `_jupyter_server_extension_paths` function was found and will be used for now. This function name will be deprecated in future releases of Jupyter Server.
[I 2023-10-05 22:06:29.689 ServerApp] Package jupyter_server_terminals took 0.0034s to import
[I 2023-10-05 22:06:29.689 ServerApp] Package jupyterlab took 0.0000s to import
[I 2023-10-05 22:06:29.711 ServerApp] Package notebook_shim took 0.0000s to import
[W 2023-10-05 22:06:29.711 ServerApp] A `_jupyter_server_extension_points` function was not found in notebook_shim. Instead, a `_jupyter_server_extension_paths` function was found and will be used for now. This function name will be deprecated in future releases of Jupyter Server.
[I 2023-10-05 22:06:29.712 ServerApp] jupyter_lsp | extension was successfully linked.
[I 2023-10-05 22:06:29.715 ServerApp] jupyter_server_terminals | extension was successfully linked.
[I 2023-10-05 22:06:29.719 ServerApp] jupyterlab | extension was successfully linked.
[E 2023-10-05 22:06:29.720 JupyterNotebookApp] Exception while loading config file /home/gpu/.jupyter/jupyter_notebook_config.py
    Traceback (most recent call last):
      File "/home/gpu/anaconda3/envs/ypq/lib/python3.8/site-packages/traitlets/config/application.py", line 858, in _load_config_files
        config = loader.load_config()
      File "/home/gpu/anaconda3/envs/ypq/lib/python3.8/site-packages/traitlets/config/loader.py", line 626, in load_config
        self._read_file_as_dict()
      File "/home/gpu/anaconda3/envs/ypq/lib/python3.8/site-packages/traitlets/config/loader.py", line 659, in _read_file_as_dict
        exec(compile(f.read(), conf_filename, "exec"), namespace, namespace)  # noqa
      File "/home/gpu/.jupyter/jupyter_notebook_config.py", line 621
        c.ServerApp.allow_origin = '*'
        ^
    IndentationError: unexpected indent
[I 2023-10-05 22:06:29.723 ServerApp] notebook | extension was successfully linked.
[I 2023-10-05 22:06:29.918 ServerApp] notebook_shim | extension was successfully linked.
[I 2023-10-05 22:06:29.950 ServerApp] notebook_shim | extension was successfully loaded.
[I 2023-10-05 22:06:29.952 ServerApp] jupyter_lsp | extension was successfully loaded.
[I 2023-10-05 22:06:29.953 ServerApp] jupyter_server_terminals | extension was successfully loaded.
[I 2023-10-05 22:06:29.954 LabApp] JupyterLab extension loaded from /home/gpu/anaconda3/envs/ypq/lib/python3.8/site-packages/jupyterlab
[I 2023-10-05 22:06:29.954 LabApp] JupyterLab application directory is /home/gpu/anaconda3/envs/ypq/share/jupyter/lab
[I 2023-10-05 22:06:29.954 LabApp] Extension Manager is 'pypi'.
[I 2023-10-05 22:06:29.957 ServerApp] jupyterlab | extension was successfully loaded.
[I 2023-10-05 22:06:29.959 ServerApp] notebook | extension was successfully loaded.
[I 2023-10-05 22:06:29.959 ServerApp] The port 8888 is already in use, trying another port.
[I 2023-10-05 22:06:29.959 ServerApp] The port 8889 is already in use, trying another port.
[I 2023-10-05 22:06:29.960 ServerApp] Serving notebooks from local directory: /data/ypq/PIX2PIX_CycleGAN/pytorch-cyclegan-and-pix2pix_fork
[I 2023-10-05 22:06:29.960 ServerApp] Jupyter Server 2.7.3 is running at:
[I 2023-10-05 22:06:29.960 ServerApp] http://localhost:8890/tree
[I 2023-10-05 22:06:29.960 ServerApp]     http://127.0.0.1:8890/tree
[I 2023-10-05 22:06:29.960 ServerApp] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[W 2023-10-05 22:06:29.963 ServerApp] No web browser found: Error('could not locate runnable browser').
[I 2023-10-05 22:06:29.983 ServerApp] Skipped non-installed server(s): bash-language-server, dockerfile-language-server-nodejs, javascript-typescript-langserver, jedi-language-server, julia-language-server, pyright, python-language-server, python-lsp-server, r-languageserver, sql-language-server, texlab, typescript-language-server, unified-language-server, vscode-css-languageserver-bin, vscode-html-languageserver-bin, vscode-json-languageserver-bin, yaml-language-server
